Fixed titles-grid gap to fit titles in div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1910,7 +1910,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 .titles-grid {
   display: grid;
   grid-template-columns: 1fr; /* Single column by default */
-  grid-gap: 10px;
+  grid-gap: 5px;
   margin: 10px 0;
 }
 
